--- a/app/views/network_router/control_mac_filters.html.erb
+++ b/app/views/network_router/control_mac_filters.html.erb
@@ -1,3 +1,14 @@
 <div>
-	<p>Control MAC Filter</p>
+	<p>Control MAC Filters</p>
+</div>
+
+<div class="">
+    <div class="">
+        <h2>Enable MAC Filters</h2>
+        <p><a class="btn btn-important" href="#">Enable</a></p>
+    </div>
+    <div class="">
+        <h2>Disable MAC Filters</h2>
+        <p><a class="btn btn-important" href="#">Disable</a></p>
+    </div>
 </div>
