--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" /> 
         
-        <base href="http://rails_play.local/" />
+        <base href="http://<%= env.inspect %>" />
         
         <title>RailsPlay</title>
         
