--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" /> 
         
-        <base href="http://<%= env.inspect %>" />
+        <base href="<%= current_full_domain_url %>" />
         
         <title>RailsPlay</title>
         
@@ -33,7 +33,7 @@
         <div id="main-container" class="container">
 
             <div class="content-container">
-                <h1>Hello, puto!</h1>
+                <h1>Welcome puto!</h1>
             </div>
 
             <hr>
