--- a/app/views/network_router/control_mac_filters.html.erb
+++ b/app/views/network_router/control_mac_filters.html.erb
@@ -1,14 +1,15 @@
 <div>
-	<p>Control MAC Filters</p>
+	<h1>Control MAC Filters</h1>
 </div>
 
 <div class="">
+
     <div class="">
-        <h2>Enable MAC Filters</h2>
-        <p><a class="btn btn-important" href="#">Enable</a></p>
+        <h3><a class="btn btn-important" href="#">Enable MAC Filters</a></h3>
     </div>
+
     <div class="">
-        <h2>Disable MAC Filters</h2>
-        <p><a class="btn btn-important" href="#">Disable</a></p>
+        <h3><a class="btn btn-important" href="#">Disable MAC Filters</a></h3>
     </div>
+    
 </div>
