--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 		<meta name="description" content="">
 
 		<%= stylesheet_link_tag "application", :media => "all" %>
-		<%= stylesheet_link_tag "dijit/themes/claro/claro", :media => "screen" %>
+		<%= stylesheet_link_tag "dijit/themes/soria/soria", :media => "screen" %>
 
 		<%= csrf_meta_tags %>
 
@@ -55,7 +55,7 @@
 		</script>
 
 	</head>
-	<body class="claro">
+	<body class="soria">
 
 		<!--[if lt IE 7]>
 			<p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
