some adds; some updts

--- a/app/assets/javascripts/network_controllers/control_mac_filters.js.erb
+++ b/app/assets/javascripts/network_controllers/control_mac_filters.js.erb
@@ -1,7 +1,7 @@
-// 0#000002
+// NR-0#000001
 require(["dojo/dom", "dojo/on", "dojo/parser", "dojo/ready", "dijit/registry", "dijit/form/Button"],
 function(dom, on, parser, ready, registry) {
-  console.info('0#000002 - loaded successfully.');
+  console.info('NR-0#000001');
 
   var enableMACFilterClick = function(evt) {
     console.log("enableMACFilterBtn clicked");
